Archive2/ca/7e17a2a2ad097c/output
main.cpp:4:6: error: expected expression
   1 X(<);
     ^
main.cpp:1:15: note: expanded from macro 'X'
#define X(M) M<0
              ^
1 error generated.
